force-app/main/default/objects/Distribuicao__c/Distribuicao__c.object-meta.xml
<CustomObject>
    <label>Distribuição</label>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribuições</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>