force-app/main/default/objects/Distribuicao__c/fields/Classe_Natureza__c.field-meta.xml
<CustomField>
    <fullName>Classe_Natureza__c</fullName>
    <label>Classe/Natureza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>