force-app/main/default/objects/Distribuicao__c/fields/Data_de_distribuicao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_distribuicao__c</fullName>
    <label>Data de distribuição</label>
    <type>Date</type>
</CustomField>