force-app/main/default/objects/Distribuicao__c/fields/Jurisdicao__c.field-meta.xml
<CustomField>
    <fullName>Jurisdicao__c</fullName>
    <label>Jurisdição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>