force-app/main/default/objects/Distribuicao__c/fields/Link_de_acesso__c.field-meta.xml
<CustomField>
    <fullName>Link_de_acesso__c</fullName>
    <formula>HYPERLINK(&quot;https://hospcom.projuris.com.br/#/distribuicao/show/&quot; + Name, &quot;Clique aqui para abrir no Projuris&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link de acesso</label>
    <type>Text</type>
</CustomField>