force-app/main/default/objects/Distribuicao__c/fields/Natureza__c.field-meta.xml
<CustomField>
    <fullName>Natureza__c</fullName>
    <label>Natureza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>