force-app/main/default/objects/Distribuicao__c/fields/Numero_do_processo__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_processo__c</fullName>
    <label>Número do processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>