force-app/main/default/objects/Distribuicao__c/fields/Partes__c.field-meta.xml
<CustomField>
    <fullName>Partes__c</fullName>
    <label>Partes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>