force-app/main/default/objects/Distribuicao__c/fields/Tipo_de_distribuicao__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_distribuicao__c</fullName>
    <label>Tipo de distribuição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>