force-app/main/default/objects/Distribuicao__c/fields/Tribunal__c.field-meta.xml
<CustomField>
    <fullName>Tribunal__c</fullName>
    <label>Tribunal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>