force-app/main/default/objects/Distribuicao__c/fields/Tribunal_original__c.field-meta.xml
<CustomField>
    <fullName>Tribunal_original__c</fullName>
    <label>Tribunal original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>