force-app/main/default/objects/Distribuicao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Natureza__c</columns>
    <columns>Classe_Natureza__c</columns>
    <columns>Data_de_distribuicao__c</columns>
    <columns>Tribunal__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo_de_distribuicao__c</columns>
    <columns>Valor_da_causa__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>